--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
+      name="google-site-verification"
+      content="YH_cN8fJLmDqk_bMbjj7c3ad5eZehxKU5Hxc6HY9fLE"
+    />
+    <!-- Google Search Consoleに登録するためのタグ -->
+    <meta
       name="description"
       content="Web site created using create-react-app"
     />
