--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <!-- Google Search Consoleに登録するためのタグ -->
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="洗濯表示をチェックできる。洗濯表示の意味がわかる。"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>洗濯表示チェッカー</title>
