--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,11 @@
 
       gtag("config", "G-2XD7HMRT2T");
     </script>
-    <meta name="google-adsense-account" content="ca-pub-9340643219089699" />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9340643219089699"
+      crossorigin="anonymous"
+    ></script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/洗濯機アイコン4.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
